package message;

enum Kind {
  IntroductionMessage = 1;
  PeersMessage = 2;
  AddServicesMessage = 3;
  RemoveServicesMessage = 4;
  AknowledgeMessage = 5;
  RequestMessage = 6;
  ResponseMessage = 7;
}
